# TDD-Course

./: CMakeLists.txt  README.md  maian.cpp
Tests/: CMakeLists.txt  test.cpp  trafficLightTestList.md  trafficLightTests.cpp
src/: Dollar.cpp  Dollar.h  Euro.cpp  Euro.h  Money.cpp  Money.h  TrafficLightTimer.cpp  TrafficLightTimer.h  trafficLight.cpp  trafficLight.h
